[package]
name = "rustforce"
version = "0.1.2"
authors = ["tzmfreedom <makoto_tajitsu@hotmail.co.jp>"]
license = "MIT"
description = "Salesforce REST API Client"
documentation = "https://docs.rs/rustforce"
homepage = "https://github.com/tzmfreedom/rustforce"
repository = "https://github.com/tzmfreedom/rustforce"
readme = "README.md"
keywords = ["Salesforce", "API"]
categories = ["web-programming"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.10.7", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"

[dev-dependencies]

cargo-license = "0.3.0"
mockito = "0.27.0"
tokio = { version = "0.2.22", features = ["rt-threaded", "macros"] } 
env_logger = "0.7.1"
anyhow = "1.0.32"
